testsuite/bsc.mcd/Misc/ClockCheckRule2.bsv.bsc-vcomp-out.expected
checking package dependencies
compiling ClockCheckRule2.bsv
code generation for sysClockCheckRule starts
Error: "ClockCheckRule2.bsv", line 8, column 6: (G0007)
  Reference across clock domain in rule `test'.
  Method calls by clock domain:
    Clock domain 1:
      default_clock:
	r.read at "ClockCheckRule2.bsv", line 9, column 12,
    Clock domain 2:
      c:
	the_s.read at "ClockCheckRule2.bsv", line 9, column 16,
	the_s.read at "ClockCheckRule2.bsv", line 9, column 20,
  During elaboration of rule `test' at "ClockCheckRule2.bsv", line 8, column
  6.
  During elaboration of `sysClockCheckRule' at "ClockCheckRule2.bsv", line 2,
  column 8.
